# python-microservice-template

./: .dive-ci  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
.github/workflows/: python-container-ci.yaml
configs/: config.yaml
webapi/: main.py
webapi/api/v1/: api.py
webapi/api/v1/endpoints/: fib.py  pairs.py
webapi/core/: config.py  metrics.py
webapi/tests/api/v1/: test_fib.py  test_pairs.py
